feat(dropblox): add swagger docs and enrich root API metadata

--- a/projects/cloud-nine/dropblox/package.json
+++ b/projects/cloud-nine/dropblox/package.json
@@ -9,6 +9,8 @@
         "dev": "node server.js"
     },
     "dependencies": {
-        "express": "^4.21.0"
+        "express": "^4.21.0",
+        "swagger-jsdoc": "^6.2.8",
+        "swagger-ui-express": "^5.0.1"
     }
 }
